Configuração do AutoMapper

--- a/CPF-CACL.GestaoSocio.Tests/CPF-CACL.GestaoSocio.Tests.csproj
+++ b/CPF-CACL.GestaoSocio.Tests/CPF-CACL.GestaoSocio.Tests.csproj
@@ -1,14 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>CPF_CACL.GestaoSocio.Domain</RootNamespace>
+    <RootNamespace>CPF_CACL.GestaoSocio.Tests</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="ValueObjects\" />
-  </ItemGroup>
 
 </Project>
