--- a/CPF-CACL.GestaoSocio.UI.MVC/CPF-CACL.GestaoSocio.UI.MVC.csproj
+++ b/CPF-CACL.GestaoSocio.UI.MVC/CPF-CACL.GestaoSocio.UI.MVC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,7 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CPF-CACL.GestaoSocio.Data\CPF-CACL.GestaoSocio.Data.csproj" />
+    <ProjectReference Include="..\CPF-CACL.GestaoSocio.Aplication\CPF-CACL.GestaoSocio.Aplication.csproj" />
+    <ProjectReference Include="..\CPF-CACL.GestaoSocio.Data\CPF-CACL.GestaoSocio.Infra.Data.csproj" />
+    <ProjectReference Include="..\CPF-CACL.GestaoSocio.Domain\CPF-CACL.GestaoSocio.Domain.csproj" />
   </ItemGroup>
 
 </Project>
