--- a/CPF-CACL.GestaoSocio.Data/CPF-CACL.GestaoSocio.Infra.Data.csproj
+++ b/CPF-CACL.GestaoSocio.Data/CPF-CACL.GestaoSocio.Infra.Data.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Map\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
