RF03 - Cadstro de Sócio

--- a/CPF-CACL.GestaoSocio.UI.MVC/CPF-CACL.GestaoSocio.UI.MVC.csproj
+++ b/CPF-CACL.GestaoSocio.UI.MVC/CPF-CACL.GestaoSocio.UI.MVC.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\CPF-CACL.GestaoSocio.Domain\CPF-CACL.GestaoSocio.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\vendors\images\" />
+  </ItemGroup>
+
 </Project>
