--- a/CPF-CACL.GestaoSocio.Aplication/CPF-CACL.GestaoSocio.Aplication.csproj
+++ b/CPF-CACL.GestaoSocio.Aplication/CPF-CACL.GestaoSocio.Aplication.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="ServiceStack.Interfaces" Version="6.10.0" />
   </ItemGroup>
 
