Commit antes da Pre-Defesa

--- a/CPF-CACL.GestaoSocio.UI.MVC/CPF-CACL.GestaoSocio.UI.MVC.csproj
+++ b/CPF-CACL.GestaoSocio.UI.MVC/CPF-CACL.GestaoSocio.UI.MVC.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\SemAcesso\" />
     <Folder Include="wwwroot\vendors\images\" />
   </ItemGroup>
 
